--- a/src/config.ini
+++ b/src/config.ini
@@ -2,3 +2,6 @@
 qr_uuid=https://login.wx2.qq.com/jslogin?appid=wx782c26e4c19acffb&redirect_uri=https://wx2.qq.com/cgi-bin/mmwebwx-bin/webwxnewloginpage&fun=new&lang=zh_CN&_= %s
 qr_url=https://login.weixin.qq.com/qrcode/
 get_cookie=https://login.wx2.qq.com/cgi-bin/mmwebwx-bin/login?loginicon=true&uuid=%s&tip=0&r=525051302&_=%s
+init_post=https://wx2.qq.com/cgi-bin/mmwebwx-bin/webwxinit?r=484269523&lang=zh_CN&pass_ticket=%s
+get_friend_list=https://wx2.qq.com/cgi-bin/mmwebwx-bin/webwxgetcontact?r=1545788615694&seq=0&skey=%s
+send_message=https://wx2.qq.com/cgi-bin/mmwebwx-bin/webwxsendmsg?lang=zh_CN&pass_ticket=%s
